service-movies/k8s/manifest-files/base/deployment.yaml
# GENERATED FROM: templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-movies
spec:
  selector:
    matchLabels:
      app: service-movies
  replicas: 1
  template:
    metadata:
      labels:
        app: service-movies
    spec:
      containers:
      - name: service-movies
        image: localhost:5000/service-movies:3
        ports:
        - containerPort: 3334
