service-movies/k8s/manifest-files/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-movies
spec:
  selector:
    app: service-movies
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3334
      targetPort: 3334
